generated/checkers/refine/KN-Out-of-Bound-13e788de-0/build_logs/syntax-repair-refine-0-0/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::nameLooksLikeCountBound(llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:50:17: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
   50 |     return Name.contains_lower("max") || Name.contains_lower("count") ||
      |                 ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:50:47: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
   50 |     return Name.contains_lower("max") || Name.contains_lower("count") ||
      |                                               ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:51:17: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
   51 |            Name.contains_lower("num") || Name.contains_lower("size");
      |                 ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:51:47: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
   51 |            Name.contains_lower("num") || Name.contains_lower("size");
      |                                               ^~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
